Fix some colors on settings values (dark mode)

--- a/assets/scss/common/_root.scss
+++ b/assets/scss/common/_root.scss
@@ -76,6 +76,10 @@
 	--atum-text-white: #{$white};
 	--atum-version: #{$white};
 	--atum-version-bg: #{rgba($black, 0.2)};
+	--atum-checkbox-label: #{$black};
+	--atum-input-text: #{$gray-600};
+	--atum-setting-info: #{$gray-700};
+	--atum-section-field: #{$white};
 	--black-shadow-light: #{rgba($black, 0.04)};
 	--blue-light-expanded: #{$blue-light};
 	--danger-hover-border: 1px solid transparent;
